# f_metaplex

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  data.csv  data.csv.example
src/: main.rs  util.rs
