[package]
name = "f_metaplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metaplex-token-metadata = "0.0.1"
solana-client = "1.8.6"
solana-sdk = "1.8.6"
spl-token = "3.2.0"
base64 ="0.13.0"
solana-cli-config = "1.8.6"
spl-associated-token-account = "1.0.3"
dotenv = "0.15.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ipfs-api = "0.14.0"
tokio = { version = "1", features = ["time"] }
http = "0.2"
ipfs-api-backend-hyper = { version = "0.3", features = ["with-hyper-rustls"], default-features = false }
hyper-rustls = { version = "0.22" }
hyper = { version = "0.14", features = ["http1", "http2", "client", "tcp"] }


